tests/borrow_err.my
let a: int = 10;
let mr = &mut a;
let r = &a; // error: cannot borrow immutably while mutably borrowed